--- a/themes/stun/layout/_partials/config.pug
+++ b/themes/stun/layout/_partials/config.pug
@@ -158,6 +158,7 @@ script.
   var Stun = window.Stun || {};
   var CONFIG = {
     root: '!{ config.root }',
+    author: '!{ theme.rootConfig.author }',
     algolia: !{ algolia },
     assistSearch: !{ assistSearch },
     fontIcon: !{ fontIcon },
