--- a/themes/stun/layout/_third-party/comments/minivaline.pug
+++ b/themes/stun/layout/_third-party/comments/minivaline.pug
@@ -1,5 +1,5 @@
 -
-  var minivaline_js = 'https://fastly.jsdelivr.net/npm/minivaline/dist/MiniValine.min.js';
+  var minivaline_js = 'https://gcore.jsdelivr.net/npm/minivaline/dist/MiniValine.min.js';
 
   if (theme.cdn.minivaline) {
     minivaline_js = theme.cdn.minivaline;
