--- a/themes/stun/layout/_third-party/comments/valine.pug
+++ b/themes/stun/layout/_third-party/comments/valine.pug
@@ -1,6 +1,6 @@
 -
-  var leancloud_storage_js = 'https://fastly.jsdelivr.net/npm/leancloud-storage@latest/dist/av-min.js';
-  var valine_js = 'https://fastly.jsdelivr.net/npm/valine@latest/dist/Valine.min.js';
+  var leancloud_storage_js = 'https://gcore.jsdelivr.net/npm/leancloud-storage@latest/dist/av-min.js';
+  var valine_js = 'https://gcore.jsdelivr.net/npm/valine@latest/dist/Valine.min.js';
 
   if (theme.cdn.leancloud_storage) {
     leancloud_storage_js = theme.cdn.leancloud_storage;
