--- a/themes/stun/layout/_scripts/stun.pug
+++ b/themes/stun/layout/_scripts/stun.pug
@@ -1,10 +1,10 @@
-script(src=`${url_for(theme.js)}/utils.js?v=${stun_env('version')}`)
-script(src=`${url_for(theme.js)}/stun-boot.js?v=${stun_env('version')}`)
-script(src=`${url_for(theme.js)}/scroll.js?v=${stun_env('version')}`)
-script(src=`${url_for(theme.js)}/header.js?v=${stun_env('version')}`)
+script(src=`${url_for(theme.js)}/utils.js`)
+script(src=`${url_for(theme.js)}/stun-boot.js`)
+script(src=`${url_for(theme.js)}/scroll.js`)
+script(src=`${url_for(theme.js)}/header.js`)
 
 if theme.sidebar.enable
-  script(src=`${url_for(theme.js)}/sidebar.js?v=${stun_env('version')}`)
+  script(src=`${url_for(theme.js)}/sidebar.js`)
 
 if theme.local_search.enable
   script(type="application/json" src=`${config.root}${config.search.path}`)
